syntax = "proto3";
package por;

enum SigAlgo {
  ECDSA = 0;
}

message SigChainElem {
  bytes Addr = 1;
  bytes NextPubkey = 2;
  bool Mining = 3;
  SigAlgo SigAlgo = 4;
  bytes Signature = 5;
}

message SigChain {
  uint32 Nonce = 1;
  uint32 DataSize = 2;
  bytes DataHash = 3;
  bytes BlockHash = 4;
  bytes SrcPubkey = 5;
  bytes DestPubkey = 6;
  repeated SigChainElem Elems = 7;
}
